app/policies/policy-api.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: api
  namespace: cpu
spec:
  endpointSelector:
    matchLabels:
      app: api
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
            - method: "GET"
              path: "/"
