app/policies/policy-traffic-generator.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traffic-generator
  namespace: cpu
spec:
  endpointSelector:
    matchLabels:
      any:app: traffic-generator
  egress:
    - toEndpoints:
        - matchLabels:
            any:app: web-fe
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toFQDNs:
        - matchName: cilium.io
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toFQDNs:
        - matchName: google.com
      toPorts:
        - ports:
            - port: "80"
